# Studies

./: .gitignore  README.md
ai/: README.md
ai/ann/exercises/: exo1.ipynb  exo2.ipynb
ai/dt_lr_test/KESKAS_AYMEN/: part1.ipynb
ai/ensemble_learning/KESKAS_AYMEN_ENSEMBLE_LEARNING/: exo1.ipynb
ai/pacman/: graphicsDisplay.py  highlight.css  projects.css  search.py
blockChain/presentation/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tsconfig.json
blockChain/src/: App.java
cav/: tp4.hlpsl
cav/report/: Report.md
cloud/: Summary.md
cloud/project/: README.md  docker-compose.yaml  init.py  pyproject.toml
cloud/project/assets/: client.css  client.js  hashimage (1).txt  hashproject.txt  hashvoid2.txt  index.html  project.module.css
cloud/project/server/: Dockerfile  index.js  package.json  pnpm-lock.yaml
cloud/project/server/middleware/: multer.js
cloud/project/service/: Dockerfile  index.js  package.json  pnpm-lock.yaml
cloud/project/service/utils/: hash.js
cloud/project/src/: main.py
crypto/: .gitignore
crypto/legacy/: app.java  hash.txt  hash2.txt
eh/: log.txt  report.md  report_1.md  report_2.md
ins/: Assignement.md  capture.pcapng
linux/: database.sh
linux/lab2/: exo3.sh  exo4.sh  exo5.sh  exo6.sh
linux/lab3/: exo1.sh  exo2.sh  exo3.sh  exo4.sh  exo6.sh  exo7.sh  exo8.sh  exo9.sh
qc/: Test1.py  intero.py  test.py
ssd/: Homework.md
ssd/project/: package.json  pnpm-lock.yaml  socketPlugin.ts  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
was/: AYMEN_KESKAS-ELAID_TEBABKHA.php
(+114 files in other folders)
