[tool.poetry]
name = "cloud"
version = "0.1.0"
description = "Handling pdf embedding"
authors = ["Shinji13 <keskasaymen8@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
PyMuPDF="^1.24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
